# bootware

./: .ansible-lint  .dockerignore  .editorconfig  .gitignore  .luarc.json  .prettierignore  .prettierrc.yaml  .shellcheckrc  .stylua.toml  .styluaignore  .yamllint  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  PSScriptAnalyzerSettings.psd1  README.md  ansible.cfg  bootware.1  bootware.ps1  bootware.sh  config.html  euclid.sh  galaxy.yml  hashmap.json  index.html  install.html  install.ps1  install.sh  justfile  local.yaml  main.yaml  package-lock.json  package.json  playbook.yaml  pyproject.toml  software.html
.github/configs/: sshd_config
.github/host_vars/: macos.yaml  ubuntu.yaml  windows.yaml
.github/workflows/: build.yaml  fuzz.yaml  main.yaml  pages.yaml  release.yaml  test.yaml
.vitepress/: config.ts
assets/: app.0660525f.js  app.076771d2.js  app.0a53e291.js  app.0e35be5f.js  app.30725f82.js  app.394870bd.js  app.3c53808e.js  app.42f47d4f.js  app.467d82cb.js  app.4be56e17.js  app.519cade9.js  app.52bfc646.js  app.561d7da1.js  app.5cb94762.js  app.6541cca9.js  app.78cbfdac.js  app.7b7e030f.js  app.83d7709e.js  app.85472470.js  app.857940cb.js  app.949c367e.js  app.9bafc195.js  app.BA5tnl3-.js  app.BK12DmyB.js  app.BZf6Kd79.js  app.BadFeqCW.js  app.BrrZH__4.js  app.C2kHJq_P.js  app.CDx3HHJ-.js  app.CHvmnCF8.js  app.CPzXuM6h.js  app.CjFTQPXi.js  app.D-NFsoeh.js  app.D1WOQd-D.js  app.D9yOnwhh.js  app.DB0seUi_.js  app.DSzz3PLy.js  app.DTnzR1pO.js  app.Dt3frbLM.js  app.HbJuuGJt.js  (+855 more)
assets/chunks/: @localSearchIndexroot.091dd061.js  @localSearchIndexroot.17378b39.js  @localSearchIndexroot.1ac00d67.js  @localSearchIndexroot.1b0c0d58.js  @localSearchIndexroot.234348dd.js  @localSearchIndexroot.2bae9310.js  @localSearchIndexroot.33ec43c7.js  @localSearchIndexroot.36bee998.js  @localSearchIndexroot.3757ee10.js  @localSearchIndexroot.417f4708.js  @localSearchIndexroot.44b265b8.js  @localSearchIndexroot.4b7c022b.js  @localSearchIndexroot.5f315e23.js  @localSearchIndexroot.69c6c28a.js  @localSearchIndexroot.6e9504f0.js  @localSearchIndexroot.77109c43.js  @localSearchIndexroot.7a114154.js  @localSearchIndexroot.7ce08cfd.js  @localSearchIndexroot.7e67ae86.js  @localSearchIndexroot.90ae7b56.js  @localSearchIndexroot.BQvacXBI.js  @localSearchIndexroot.BSAxyGTF.js  @localSearchIndexroot.Bi8VYeYS.js  @localSearchIndexroot.BoG8zLwy.js  @localSearchIndexroot.C0JWmnJJ.js  @localSearchIndexroot.COvUKtFg.js  @localSearchIndexroot.CPnVEelL.js  @localSearchIndexroot.CrHmBN0c.js  @localSearchIndexroot.D75oTEhx.js  @localSearchIndexroot.DH_9sDNy.js  @localSearchIndexroot.De9H2Uto.js  @localSearchIndexroot.DfMrTq8S.js  @localSearchIndexroot.Dt6f7Jwh.js  @localSearchIndexroot.DyXofA62.js  @localSearchIndexroot.Dzuyyex_.js  @localSearchIndexroot.E02ZyQ1R.js  @localSearchIndexroot.Fbb9Pwkt.js  @localSearchIndexroot.QUKBsr-q.js  @localSearchIndexroot.a0ed850e.js  @localSearchIndexroot.a236123a.js  (+127 more)
completions/: BootwareCompletion.psm1  bootware.bash  bootware.fish  bootware.man  bootware.psm1
configs/: ansible.cfg  hosts  requirements.yaml
data/: color.yaml  roles.json
data/config/: script_analyzer.psd1
data/public/: robots.txt
data/templates/: bootware.rb.tmpl  bootware.spec.tmpl  software.mustache
doc/: config.md  index.md  install.md
docs/: config.md  contrib.md  index.md  install.md
docs/.vuepress/: config.js  enhanceApp.js
group_vars/: all.yaml
host_vars/: bootware.yaml  euclid.yaml
molecule/freebsd/: Vagrantfile
molecule/ubuntu/: Vagrantfile
molecule/windows/: Vagrantfile
pkg/man/: bootware.1
roles/age/: README.md
roles/alacritty/: README.md
roles/audio/: README.md
roles/bash/: README.md
roles/bashdb/: README.md
roles/bat/: README.md
roles/bats/: README.md
roles/beekeeper/: README.md
roles/chrome/: README.md
roles/croc/: README.md
roles/cuda/: README.md
roles/datree/: README.md
roles/dbeaver/: README.md
roles/defterm/: README.md
roles/deno/: README.md
roles/docker/: README.md
roles/doctl/: README.md
roles/duf/: README.md
roles/dust/: README.md
roles/dvc/: README.md
roles/emacs/: README.md
roles/essential/: README.md
roles/fish/: README.md
roles/fzf/: README.md
roles/gcp/: README.md
roles/gitlab/: README.md
roles/helmfile/: README.md
roles/java/: README.md
roles/julia/: README.md
roles/kind/: README.md
roles/kubectl/: README.md
roles/lazygit/: README.md
roles/lua/: README.md
roles/mdbook/: README.md
roles/navi/: README.md
roles/node/: README.md
roles/ots/: README.md
roles/packer/: README.md
roles/parquet/: README.md
roles/restic/: README.md
roles/ruby/: README.md
roles/rust/: README.md
roles/sd/: README.md
roles/security/: README.md
roles/snap/: README.md
roles/sops/: README.md
roles/starship/: README.md
roles/system/: README.md
roles/update/: README.md
roles/vagrant/: README.md
roles/virtualbox/: README.md
roles/wasm/: README.md
roles/xh/: README.md
roles/xsv/: README.md
roles/zellij/: README.md
roles/zola/: README.md
roles/zoxide/: README.md
script/: build_docs.ts  colormap.py  doc.ts  fmt_toml.sh  package.sh  pkg.nu  pkg.sh  req_libc.nu  run_tests.ts  test_e2e.nu
script/templates/: APKBUILD.tmpl  bootware.rb.tmpl
scripts/: build_docs.js  build_docs.ts  build_package.js  build_package.sh  control.mustache  package.sh  package_debian.js  print_changes.js  roles.json  roles.yaml  run_tests.js  run_tests.ts  shellcheck.sh  shellcheck_recursive.sh  shfmt.js  shfmt.ts  test_roles.js
scripts/package/: debian.js  fedora.js
scripts/templates/: APKBUILD.tmpl  PKGBUILD.tmpl  bootware.spec.mustache  bootware.spec.tmpl  control.mustache  control.tmpl  spec.mustache
src/: bootware.ps1  bootware.sh  install.nu  install.ps1  install.sh
src/completion/: bootware.bash  (+3 more)
tests/: Dockerfile.arch  Dockerfile.deb  Dockerfile.debian  Dockerfile.fedora  Dockerfile.redhat  Dockerfile.rpm  Dockerfile.ubuntu
(+1011 files in other folders)
