# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml/.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[project]
authors = [{ name = "Macklan Weinstein", email = "macklan.weinstein@gmail.com" }]
description = "Ansible collection for bootstrapping software installations."
homepage = "https://github.com/scruffaluff/bootware"
keywords = []
license = "MIT"
name = "bootware"
readme = "README.md"
requires-python = ">=3.11.0,<4.0.0"
version = "0.9.0"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ansible = ">=11.3.0,<12.0.0"
ansible-compat = ">=25.1.0,<26.0.0"
ansible-lint = { markers = "platform_system != 'Windows'", version = ">=25.1.0,<26.0.0" }
yamllint = ">=1.36.0,<2.0.0"
