# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling~=1.0"]

[dependency-groups]
dev = [
  "ansible ~= 13.2",
  "ansible-compat ~= 25.12",
  "ansible-lint ~= 25.12; sys_platform != 'windows'",
  "pytest ~= 9.0",
  "ruff ~= 0.14.10",
  "ty ~= 0.0.10",
  "yamllint ~= 1.37",
]

[project]
authors = [
  { name = "Macklan Weinstein", email = "macklan.weinstein@gmail.com" },
]
description = "Ansible collection for bootstrapping software installations."
homepage = "https://github.com/scruffaluff/bootware"
keywords = []
license = "MIT"
name = "bootware"
readme = "README.md"
requires-python = ">=3.12.0,<4.0.0"
version = "0.10.0"

[tool.pytest.ini_options]
addopts = "-sv"
cache_dir = ".vendor/cache/pytest"
markers = ["e2e: mark as end to end test.", "unit: mark as unit test."]
testpaths = ["test"]

[tool.ruff]
cache-dir = ".vendor/cache/ruff"
extend-exclude = ["jupyter_notebook_config.py"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
flake8-annotations = { allow-star-arg-any = true }
pydocstyle = { convention = "google" }
ignore = [
  "COM",     # Rule conflicts with formatter.
  "FBT",     # Boolean function arguments are acceptable.
  "FIX",     # Todo comments are acceptable.
  "ICN",     # Import abbreviations reduce readability.
  "INP001",  # Project hooks directory is not a package.
  "PLR2004", # Constant numerical comparisons are often readable.
  "S101",    # Assert statements are standard for test functions.
  "S603",    # Rule warns about using subprocess commands without a solution.
  "S607",    # Partial paths for process executables is more cross platform.
  "T201",    # Print statements are acceptable for CLI applications.
  "T203",    # Print statements are acceptable for CLI applications.
  "TD",      # Todo formatting is excessive for personal projects.
]
select = ["ALL"]

[tool.ty.rules]
unresolved-import = "ignore"
unused-ignore-comment = "error"

[tool.ty.src]
exclude = [
  '\.benchmarks/',
  '\.cache/',
  '\.hypothesis/',
  '\.pytest_cache/',
  '\.ruff_cache/',
  '\.vendor/',
  '\.venv/',
  'tmp/',
  'jupyter_notebook_config.py',
]

[tool.ty.terminal]
error-on-warning = true

[tool.uv]
package = false
